syntax = "proto3";

package messages.analyzer;

option java_multiple_files = true;
option java_package = "ru.practicum.grpc.messages";

message SimilarEventsRequestProto {
    int64 event_id = 1;         //  идентификатор мероприятия, для которого нужно найти похожие мероприятия
    int64 user_id = 2;          //  идентификатор пользователя, для которого из выдачи нужно исключить мероприятия, с которыми он уже взаимодействовал
    int64 max_results = 3;      //  ограничение количества мероприятий в результате выполнения запроса
}