syntax = "proto3";

package stats.service.dashboard;

import "google/protobuf/empty.proto";
import "messages/analyzer/recommended_event.proto";
import "messages/analyzer/user_predictions_request.proto";
import "messages/analyzer/similar_events_request.proto";
import "messages/analyzer/interactions_count_request.proto";

option java_multiple_files = true;
option java_package = "ru.practicum.grpc.analyzer";

service RecommendationsController {
  rpc GetRecommendationsForUser (messages.analyzer.UserPredictionsRequestProto)
      returns (stream messages.analyzer.RecommendedEventProto);

  rpc GetSimilarEvents (messages.analyzer.SimilarEventsRequestProto)
      returns (stream messages.analyzer.RecommendedEventProto);

  rpc GetInteractionsCount (messages.analyzer.InteractionsCountRequestProto)
      returns (stream messages.analyzer.RecommendedEventProto);

}