syntax = "proto3";

package stats.service.collector;

import "google/protobuf/empty.proto";
import "messages/collector/user_action.proto";

option java_multiple_files = true;
option java_package = "ru.practicum.grpc.collector";

service UserActionController {
  rpc CollectUserAction (messages.collector.UserActionProto)
      returns (google.protobuf.Empty);

}